--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -18,7 +18,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textSize="20sp"/>
+        android:textColor="#fff"
+        android:textSize="30sp"/>
 
     <TextView
         android:id="@+id/title_update_time"
